[gd_scene load_steps=2 format=3 uid="uid://ceoljh75q26fg"]

[ext_resource type="Script" path="res://Hud.gd" id="1_uxdqu"]

[node name="Node2D" type="CanvasLayer"]
script = ExtResource("1_uxdqu")

[node name="ScoreP1" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = 74.65
offset_right = 87.0
offset_bottom = 123.65
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Wins P1: --"

[node name="ScoreP2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = 134.45
offset_right = 87.0
offset_bottom = 183.45
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Wins P2: --"

[node name="GameName" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_right = 271.0
offset_bottom = 137.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Four in Line"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -39.0
offset_right = 114.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
text = "StartGame"

[node name="RestartGame" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -39.0
offset_right = 114.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Again"

[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="RestartGame" to="." method="_on_restart_game_pressed"]
